--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,36 @@
   "display": "standalone",
   "background_color": "#212282",
   "theme_color": "#212282",
+  "orientation": "portrait-primary",
+  "lang": "en",
+  "scope": "/",
   "icons": [
     {
       "src": "images/icons/favicon.ico",
-      "sizes": "16x16 32x32",
-      "type": "image/x-icon"
+      "sizes": "16x16 32x32 48x48",
+      "type": "image/x-icon",
+      "purpose": "any"
     },
     {
       "src": "images/icons/9yards-logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "images/icons/9yards-logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["business", "entertainment", "productivity"],
+  "screenshots": [
+    {
+      "src": "images/icons/9yards-logo.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "platform": "wide"
     }
   ]
 }
